src/main/gen/org/c3lang/intellij/rewrite/parser/C3Parser.java
// This is a generated file. Not intended for manual editing.
package org.c3lang.intellij.rewrite.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.c3lang.intellij.rewrite.psi.C3Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class C3Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  /* ********************************************************** */
  // LPAREN (expr (COMMA expr)*)? RPAREN
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && arguments_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ARGUMENTS, r);
    return r;
  }

  // (expr (COMMA expr)*)?
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    arguments_1_0(b, l + 1);
    return true;
  }

  // expr (COMMA expr)*
  private static boolean arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && arguments_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expr)*
  private static boolean arguments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arguments_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arguments_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean arguments_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // type IDENTIFIER (EQUALS expr)? SEMICOLON
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, null);
    r = type(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    r = r && assignment_2(b, l + 1);
    p = r; // pin = 3
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (EQUALS expr)?
  private static boolean assignment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_2")) return false;
    assignment_2_0(b, l + 1);
    return true;
  }

  // EQUALS expr
  private static boolean assignment_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ATTRIBUTE_NAME (LPAREN (expr (COMMA expr)*)? RPAREN)?
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    if (!nextTokenIs(b, ATTRIBUTE_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATTRIBUTE_NAME);
    r = r && attribute_1(b, l + 1);
    exit_section_(b, m, ATTRIBUTE, r);
    return r;
  }

  // (LPAREN (expr (COMMA expr)*)? RPAREN)?
  private static boolean attribute_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1")) return false;
    attribute_1_0(b, l + 1);
    return true;
  }

  // LPAREN (expr (COMMA expr)*)? RPAREN
  private static boolean attribute_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && attribute_1_0_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (expr (COMMA expr)*)?
  private static boolean attribute_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1_0_1")) return false;
    attribute_1_0_1_0(b, l + 1);
    return true;
  }

  // expr (COMMA expr)*
  private static boolean attribute_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && attribute_1_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expr)*
  private static boolean attribute_1_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1_0_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!attribute_1_0_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "attribute_1_0_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean attribute_1_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_1_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // call_name arguments (BANG | PANIC)?
  public static boolean call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = call_name(b, l + 1);
    r = r && arguments(b, l + 1);
    r = r && call_2(b, l + 1);
    exit_section_(b, m, CALL, r);
    return r;
  }

  // (BANG | PANIC)?
  private static boolean call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_2")) return false;
    call_2_0(b, l + 1);
    return true;
  }

  // BANG | PANIC
  private static boolean call_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_2_0")) return false;
    boolean r;
    r = consumeToken(b, BANG);
    if (!r) r = consumeToken(b, PANIC);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER ((PATH_SEPARATOR | PERIOD) IDENTIFIER)*
  public static boolean call_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CALL_NAME, null);
    r = consumeToken(b, IDENTIFIER);
    p = r; // pin = 1
    r = r && call_name_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ((PATH_SEPARATOR | PERIOD) IDENTIFIER)*
  private static boolean call_name_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_name_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!call_name_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_name_1", c)) break;
    }
    return true;
  }

  // (PATH_SEPARATOR | PERIOD) IDENTIFIER
  private static boolean call_name_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_name_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = call_name_1_0_0(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  // PATH_SEPARATOR | PERIOD
  private static boolean call_name_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_name_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, PATH_SEPARATOR);
    if (!r) r = consumeToken(b, PERIOD);
    return r;
  }

  /* ********************************************************** */
  // LPAREN type RPAREN
  public static boolean cast(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, CAST, r);
    return r;
  }

  /* ********************************************************** */
  // KW_COMP_ELSE COLON fn_statement*
  public static boolean comp_else(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_else")) return false;
    if (!nextTokenIs(b, KW_COMP_ELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_COMP_ELSE, COLON);
    r = r && comp_else_2(b, l + 1);
    exit_section_(b, m, COMP_ELSE, r);
    return r;
  }

  // fn_statement*
  private static boolean comp_else_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_else_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fn_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comp_else_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_COMP_ENDIF SEMICOLON
  public static boolean comp_endif(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_endif")) return false;
    if (!nextTokenIs(b, KW_COMP_ENDIF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_COMP_ENDIF, SEMICOLON);
    exit_section_(b, m, COMP_ENDIF, r);
    return r;
  }

  /* ********************************************************** */
  // KW_COMP_IF expr COLON fn_statement* comp_else? comp_endif
  public static boolean comp_if(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_if")) return false;
    if (!nextTokenIs(b, KW_COMP_IF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_COMP_IF);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && comp_if_3(b, l + 1);
    r = r && comp_if_4(b, l + 1);
    r = r && comp_endif(b, l + 1);
    exit_section_(b, m, COMP_IF, r);
    return r;
  }

  // fn_statement*
  private static boolean comp_if_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_if_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fn_statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comp_if_3", c)) break;
    }
    return true;
  }

  // comp_else?
  private static boolean comp_if_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comp_if_4")) return false;
    comp_else(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KW_CONST (type IDENTIFIER | IDENTIFIER) EQUALS expr SEMICOLON
  public static boolean const_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_$")) return false;
    if (!nextTokenIs(b, KW_CONST)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_CONST);
    r = r && const_1(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, CONST, r);
    return r;
  }

  // type IDENTIFIER | IDENTIFIER
  private static boolean const_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_1_0(b, l + 1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  // type IDENTIFIER
  private static boolean const_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // param_contract | return_contract | deprecated_contract | require_contract | ensure_contract | pure_contract
  public static boolean contract(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "contract")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTRACT, "<contract>");
    r = param_contract(b, l + 1);
    if (!r) r = return_contract(b, l + 1);
    if (!r) r = deprecated_contract(b, l + 1);
    if (!r) r = require_contract(b, l + 1);
    if (!r) r = ensure_contract(b, l + 1);
    if (!r) r = pure_contract(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // EQUALS expr
  public static boolean default_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_$")) return false;
    if (!nextTokenIs(b, EQUALS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && expr(b, l + 1);
    exit_section_(b, m, DEFAULT, r);
    return r;
  }

  /* ********************************************************** */
  // KW_DOC_DEPRECATED STRING?
  public static boolean deprecated_contract(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deprecated_contract")) return false;
    if (!nextTokenIs(b, KW_DOC_DEPRECATED)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KW_DOC_DEPRECATED);
    r = r && deprecated_contract_1(b, l + 1);
    exit_section_(b, m, DEPRECATED_CONTRACT, r);
    return r;
  }

  // STRING?
  private static boolean deprecated_contract_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deprecated_contract_1")) return false;
    consumeToken(b, STRING);
    return true;
  }

  /* ********************************************************** */
  // COLON STRING
  public static boolean description(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "description")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, STRING);
    exit_section_(b, m, DESCRIPTION, r);
    return r;
  }

  /* ********************************************************** */
  // DOC_START TEXT? contract* DOC_END
  public static boolean doc_comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment")) return false;
    if (!nextTokenIs(b, DOC_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOC_START);
    r = r && doc_comment_1(b, l + 1);
    r = r && doc_comment_2(b, l + 1);
    r = r && consumeToken(b, DOC_END);
    exit_section_(b, m, DOC_COMMENT, r);
    return r;
  }

  // TEXT?
  private static boolean doc_comment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment_1")) return false;
    consumeToken(b, TEXT);
    return true;
  }

  // contract*
  private static boolean doc_comment_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_comment_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!contract(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc_comment_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // KW_DOC_ENSURE expr (COMMA expr)* description?
  public static boolean ensure_contract(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ensure_contract")) return false;
    if (!nextTokenIs(b, KW_DOC_ENSURE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENSURE_CONTRACT, null);
    r = consumeToken(b, KW_DOC_ENSURE);
    p = r; // pin = 1
    r = r && report_error_(b, expr(b, l + 1));
    r = p && report_error_(b, ensure_contract_2(b, l + 1)) && r;
    r = p && ensure_contract_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA expr)*
  private static boolean ensure_contract_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ensure_contract_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ensure_contract_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ensure_contract_2", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean ensure_contract_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ensure_contract_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // description?
  private static boolean ensure_contract_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ensure_contract_3")) return false;
    description(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // KW_ENUM IDENTIFIER (COLON (parameters | (KW_INLINE IDENTIFIER)))? enum_body
  public static boolean enum_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_$")) return false;
    if (!nextTokenIs(b, KW_ENUM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_ENUM, IDENTIFIER);
    r = r && enum_2(b, l + 1);
    r = r && enum_body(b, l + 1);
    exit_section_(b, m, ENUM, r);
    return r;
  }

  // (COLON (parameters | (KW_INLINE IDENTIFIER)))?
  private static boolean enum_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_2")) return false;
    enum_2_0(b, l + 1);
    return true;
  }

  // COLON (parameters | (KW_INLINE IDENTIFIER))
  private static boolean enum_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && enum_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // parameters | (KW_INLINE IDENTIFIER)
  private static boolean enum_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_2_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = parameters(b, l + 1);
    if (!r) r = enum_2_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_INLINE IDENTIFIER
  private static boolean enum_2_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_2_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_INLINE, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (enum_value (COMMA enum_value)*)? RBRACE
  public static boolean enum_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && enum_body_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, ENUM_BODY, r);
    return r;
  }

  // (enum_value (COMMA enum_value)*)?
  private static boolean enum_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1")) return false;
    enum_body_1_0(b, l + 1);
    return true;
  }

  // enum_value (COMMA enum_value)*
  private static boolean enum_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enum_value(b, l + 1);
    r = r && enum_body_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA enum_value)*
  private static boolean enum_body_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enum_body_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_body_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA enum_value
  private static boolean enum_body_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && enum_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (EQUALS expr)?
  public static boolean enum_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_value")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && enum_value_1(b, l + 1);
    exit_section_(b, m, ENUM_VALUE, r);
    return r;
  }

  // (EQUALS expr)?
  private static boolean enum_value_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_value_1")) return false;
    enum_value_1_0(b, l + 1);
    return true;
  }

  // EQUALS expr
  private static boolean enum_value_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_value_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // term (operator term)*
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = term(b, l + 1);
    r = r && expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (operator term)*
  private static boolean expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_1", c)) break;
    }
    return true;
  }

  // operator term
  private static boolean expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = operator(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_FAULTDEF IDENTIFIER (COMMA IDENTIFIER)* SEMICOLON
  public static boolean faultdef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "faultdef")) return false;
    if (!nextTokenIs(b, KW_FAULTDEF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FAULTDEF, null);
    r = consumeTokens(b, 1, KW_FAULTDEF, IDENTIFIER);
    p = r; // pin = 1
    r = r && report_error_(b, faultdef_2(b, l + 1));
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA IDENTIFIER)*
  private static boolean faultdef_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "faultdef_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!faultdef_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "faultdef_2", c)) break;
    }
    return true;
  }

  // COMMA IDENTIFIER
  private static boolean faultdef_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "faultdef_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (PERIOD IDENTIFIER)*
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD, null);
    r = consumeToken(b, IDENTIFIER);
    p = r; // pin = 1
    r = r && field_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (PERIOD IDENTIFIER)*
  private static boolean field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!field_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "field_1", c)) break;
    }
    return true;
  }

  // PERIOD IDENTIFIER
  private static boolean field_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PERIOD, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (module | statement)*
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    while (true) {
      int c = current_position_(b);
      if (!file_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file", c)) break;
    }
    return true;
  }

  // module | statement
  private static boolean file_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file_0")) return false;
    boolean r;
    r = module(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // doc_comment? KW_EXTERN? KW_FN type fq_name parameters attribute* (lambda? SEMICOLON | fn_body)
  public static boolean fn(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FN, "<fn>");
    r = fn_0(b, l + 1);
    r = r && fn_1(b, l + 1);
    r = r && consumeToken(b, KW_FN);
    r = r && type(b, l + 1);
    r = r && fq_name(b, l + 1);
    r = r && parameters(b, l + 1);
    r = r && fn_6(b, l + 1);
    r = r && fn_7(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // doc_comment?
  private static boolean fn_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fn_0")) return false;
    doc_comment(b, l + 1);
    return true;
  }
